--- a/sections/main-cart.liquid
+++ b/sections/main-cart.liquid
@@ -22,11 +22,11 @@
                 {% if item.image %}
                   <img src="{{ item.image | img_url: 'medium' }}" alt="{{ item.title | escape }}">
                 {% elsif is_setup %}
-                  <img src="{{ 'professional-setup.png' | asset_url }}" alt="{{ item.title | escape }}">
+                  <img src="{{ 'professional-setup.jpg' | asset_url }}" alt="{{ item.title | escape }}">
                 {% elsif item.product.handle contains 'annual' or item.product.handle contains '490' %}
-                  <img src="{{ 'bot-suite-annual.png' | asset_url }}" alt="{{ item.title | escape }}">
+                  <img src="{{ 'bot-suite-annual.jpg' | asset_url }}" alt="{{ item.title | escape }}">
                 {% elsif item.product.handle contains 'monthly' or item.product.handle contains '49' %}
-                  <img src="{{ 'bot-suite-monthly.png' | asset_url }}" alt="{{ item.title | escape }}">
+                  <img src="{{ 'bot-suite-monthly.jpg' | asset_url }}" alt="{{ item.title | escape }}">
                 {% else %}
                   <img src="{{ 'trading-bot-suite.jpg' | asset_url }}" alt="{{ item.title | escape }}">
                 {% endif %}
