Change professional setup title in pricing

--- a/sections/pricing.liquid
+++ b/sections/pricing.liquid
@@ -545,7 +545,7 @@
           "type": "text",
           "id": "addon_name",
           "label": "Add-on Name",
-          "default": "Professional Setup"
+          "default": "Setup"
         },
         {
           "type": "text",
